force-app/main/default/objects/Sub_Docket__c/Sub_Docket__c.object-meta.xml
<CustomObject>
    <label>Sub-Docket</label>
    <nameField>
        <label>Sub-Docket ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-Dockets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>