force-app/main/default/objects/Sub_Docket__c/fields/Consignment__c.field-meta.xml
<CustomField>
    <fullName>Consignment__c</fullName>
    <label>Article</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Sub-Dockets</relationshipLabel>
    <relationshipName>Sub_Dockets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>