force-app/main/default/objects/Sub_Docket__c/fields/Date_Registered__c.field-meta.xml
<CustomField>
    <fullName>Date_Registered__c</fullName>
    <label>Date Registered</label>
    <type>DateTime</type>
</CustomField>