force-app/main/default/objects/Sub_Docket__c/fields/Delivery_Depot__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Depot__c</fullName>
    <label>Delivery Depot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>