force-app/main/default/objects/Sub_Docket__c/fields/Payer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account_Number__c</fullName>
    <label>Payer Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>